Added basic color and typefaces

--- a/index.html
+++ b/index.html
@@ -1,56 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="author" content="">
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
         <title>New page</title>
-        <link href="css/style.css" rel="stylesheet">
-        <script>/* Pinegrow Interactions, do not remove */ (function(){try{if(!document.documentElement.hasAttribute('data-pg-ia-disabled')) { window.pgia_small_mq=typeof pgia_small_mq=='string'?pgia_small_mq:'(max-width:767px)';window.pgia_large_mq=typeof pgia_large_mq=='string'?pgia_large_mq:'(min-width:768px)';var style = document.createElement('style');var pgcss='html:not(.pg-ia-no-preview) [data-pg-ia-hide=""] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show=""] {opacity:1;visibility:visible;display:block;}';if(document.documentElement.hasAttribute('data-pg-id') && document.documentElement.hasAttribute('data-pg-mobile')) {pgia_small_mq='(min-width:0)';pgia_large_mq='(min-width:99999px)'} pgcss+='@media ' + pgia_small_mq + '{ html:not(.pg-ia-no-preview) [data-pg-ia-hide="mobile"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="mobile"] {opacity:1;visibility:visible;display:block;}}';pgcss+='@media ' + pgia_large_mq + '{html:not(.pg-ia-no-preview) [data-pg-ia-hide="desktop"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="desktop"] {opacity:1;visibility:visible;display:block;}}';style.innerHTML=pgcss;document.querySelector('head').appendChild(style);}}catch(e){console&&console.log(e);}})()</script>
-    </head>
-    <body style="margin: 0; background-color: #fbd935;">
-        <div class="header">
-            <img src="assets/img/guadalajara-logo.png"/>
-        </div>
-        <nav class="navBar">
-            <ul>
-                <li>
-                    <a href="">Location</a>
-                </li>
-                <li>
-                    <a href="" target="_pg_blank">Our Story</a>
-                </li>
-                <li>
-                    <a href="" target="_pg_blank">E-gift cards</a>
-                    <a href="" target="_pg_blank"></a>
-                </li>
-                <li>
-                    <a href="">Contact</a>
-                </li>
-            </ul>
-        </nav>
-        <section>
-            <h1><span>Aloha!</span> <span>Welcome to </span><span style="opacity: 0;">Guadalajara Grill</span></h1>
-            <div class="pg-empty-placeholder" id="lottie-one" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"","l":[{"t":"tween","p":2,"d":2,"l":{"pgLottie":{"seek":1}},"e":"Linear.easeInOut"}]}]}}]}'></div>
-            <h2>Family-owned Authentic Mexican Cuisine</h2>
-            <button>View Menu</button>
-        </section>
-        <section>
-            <h3>Location Location&nbsp;Location Location&nbsp;Location Location Location Location Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d901.8103165755932!2d-157.9207426500619!3d21.63839082185303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c00451360f80cf1%3A0x930291a38bab3132!2sGuadalajara%20Grill%20Hawaii!5e0!3m2!1sen!2sus!4v1627371047882!5m2!1sen!2sus" width="600" height="450" style="border: 0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>
-            <p>Inside Hukilau Marketplace<br>55-370 Kamehameha Hwy<br>Laie, HI 96762<br>USA</p>
-            <button>Get Directions</button>
-        </section>
-        <section>
-            <h3>OUR STORY</h3>
-            <p>Two brothers and a lifelong dream to open their own food business in Hawaii. This dream started to become a reality when Gio and Javi the owners of Guadalajara Grill moved to Hawaii. They started working at the same restaurant where Javi, worked as a Chef. Gio was the Manager and with both of their experience they used it to start their very own business.</p>
-            <q>FAMILY OWNED AND OPERATED SINCE 2016</q>
-            <p>Since 2016 Javi and Gio have been great companions. Influencing each other to make the right choices in order to achieve their dream.</p>
-            <img src="assets/img/padilla-family.png" style="width: 100%;"/>
-        </section>
-        <footer class="pg-empty-placeholder"></footer>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.12/lottie.min.js" integrity="sha512-Dr2QERtNqLw0I06FR7G73CjiWvR4roRMDNTbOGp+qeGhVjEl0xs4AKZzqVFREqdOL3t8ei7H9y9XUcpYVkwEIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <link rel="stylesheet" href="https://use.typekit.net/oaa1rws.css"> 
+        <link href="css/style.css" rel="stylesheet"> 
+        <script>/* Pinegrow Interactions, do not remove */ (function(){try{if(!document.documentElement.hasAttribute('data-pg-ia-disabled')) { window.pgia_small_mq=typeof pgia_small_mq=='string'?pgia_small_mq:'(max-width:767px)';window.pgia_large_mq=typeof pgia_large_mq=='string'?pgia_large_mq:'(min-width:768px)';var style = document.createElement('style');var pgcss='html:not(.pg-ia-no-preview) [data-pg-ia-hide=""] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show=""] {opacity:1;visibility:visible;display:block;}';if(document.documentElement.hasAttribute('data-pg-id') && document.documentElement.hasAttribute('data-pg-mobile')) {pgia_small_mq='(min-width:0)';pgia_large_mq='(min-width:99999px)'} pgcss+='@media ' + pgia_small_mq + '{ html:not(.pg-ia-no-preview) [data-pg-ia-hide="mobile"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="mobile"] {opacity:1;visibility:visible;display:block;}}';pgcss+='@media ' + pgia_large_mq + '{html:not(.pg-ia-no-preview) [data-pg-ia-hide="desktop"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="desktop"] {opacity:1;visibility:visible;display:block;}}';style.innerHTML=pgcss;document.querySelector('head').appendChild(style);}}catch(e){console&&console.log(e);}})()</script>         
+    </head>     
+    <body class="main"> 
+        <div class="header"> 
+            <img src="assets/img/guadalajara-logo.png"/> 
+        </div>         
+        <nav class="navBar"> 
+            <ul> 
+                <li> 
+                    <a href="">Location</a> 
+                </li>                 
+                <li> 
+                    <a href="" target="_pg_blank">Our Story</a> 
+                </li>                 
+                <li> 
+                    <a href="" target="_pg_blank">E-gift cards</a> 
+                    <a href="" target="_pg_blank"></a> 
+                </li>                 
+                <li> 
+                    <a href="">Contact</a> 
+                </li>                 
+            </ul>             
+        </nav>         
+        <section class="eachSection"> 
+            <h1 style="position: relative; margin-bottom: 0; text-align: center;"><span id="aloha">Aloha!</span> <span id="welcome">Welcome to </span></h1> 
+            <div id="lottie-one" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"","l":[{"t":"tween","p":2,"d":2,"l":{"pgLottie":{"seek":1}},"e":"Linear.easeInOut"}]}]}}]}'></div>             
+            <h2>Family-owned Authentic Mexican Cuisine</h2> 
+            <button>View Menu</button>             
+        </section>         
+        <section style="background-color: #8fa33b;"> 
+            <h3>Location Location&nbsp;Location Location&nbsp;Location Location Location Location Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location&nbsp;Location Location Location Location</h3> 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d901.8103165755932!2d-157.9207426500619!3d21.63839082185303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c00451360f80cf1%3A0x930291a38bab3132!2sGuadalajara%20Grill%20Hawaii!5e0!3m2!1sen!2sus!4v1627371047882!5m2!1sen!2sus" width="600" height="450" style="border: 0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>             
+            <p>Inside Hukilau Marketplace<br>55-370 Kamehameha Hwy<br>Laie, HI 96762<br>USA</p> 
+            <button>Get Directions</button>             
+        </section>         
+        <section style="background-color: #5bb0a5;"> 
+            <h3>OUR STORY</h3> 
+            <p>Two brothers and a lifelong dream to open their own food business in Hawaii. This dream started to become a reality when Gio and Javi the owners of Guadalajara Grill moved to Hawaii. They started working at the same restaurant where Javi, worked as a Chef. Gio was the Manager and with both of their experience they used it to start their very own business.</p> 
+            <q>FAMILY OWNED AND OPERATED SINCE 2016</q> 
+            <p>Since 2016 Javi and Gio have been great companions. Influencing each other to make the right choices in order to achieve their dream.</p> 
+            <img src="assets/img/padilla-family.png" style="width: 100%;"/> 
+        </section>         
+        <footer class="pg-empty-placeholder"></footer>         
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.12/lottie.min.js" integrity="sha512-Dr2QERtNqLw0I06FR7G73CjiWvR4roRMDNTbOGp+qeGhVjEl0xs4AKZzqVFREqdOL3t8ei7H9y9XUcpYVkwEIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>         
         <script>
 			lottie.loadAnimation({
 			container: document.getElementById('lottie-one'),
@@ -59,7 +60,7 @@
 			autoplay: false,
 			path: './assets/lottie/guadalajara-grill-title.json'
 		});
-		</script>
-        <script src="pgia/lib/pgia.js"></script>
-    </body>
+		</script>         
+        <script src="pgia/lib/pgia.js"></script>         
+    </body>     
 </html>
