--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav class="navBar">
             <ul> 
                 <li> 
-                    <a href="">Location</a> 
+                    <a href="#locationSec">Location</a> 
                 </li>                 
                 <li> 
-                    <a href="" target="_pg_blank">Our Story</a> 
+                    <a href="#storySec">Our Story</a> 
                 </li>                 
                 <li> 
                     <a href="" target="_pg_blank">E-gift cards</a> 
@@ -35,7 +35,7 @@
         <section class="eachSection fullHeight"> 
             <h1 class="title-intro"><span id="aloha" class="blue-text">Aloha!</span> <span id="welcome" class="green-text">Welcome to </span></h1> 
             <div id="lottie-one" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"","l":[{"t":"tween","p":0,"d":2,"l":{"pgLottie":{"seek":1}},"e":"Linear.easeInOut"}]}]}}]}'></div>             
-            <h2 style="font-family: museo-slab; font-weight: 400; font-size: 3.1vw; text-align: center; margin-top: 5%; margin-bottom: 20%; color: #2d2525;">Family-owned Authentic Mexican Cuisine</h2> 
+            <h2 style="font-family: museo-slab; font-weight: 400; font-size: 3.1vw; text-align: center; margin-top: 5%; margin-bottom: 10%; color: #2d2525;">Family-owned Authentic Mexican Cuisine</h2> 
             <div class="button red-bg">
                 <a href="" style="position: absolute; z-index: 1; top: 0; bottom: 0; right: 0; left: 0;"></a> 
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.58 13.39" width="25" height="25">
@@ -86,7 +86,7 @@
                 </svg>
                 <img src="assets/img/arrow-down.svg" style="position: absolute; top: 35%; left: 35%;"/>
             </div>
-            <div class="shapeContainer" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":1.01,"d":0.9,"l":{"y":"6vh"},"e":"Power4.easeInOut"}]},{"t":"#platoShape","l":[{"t":"tween","p":1.07,"d":0.9,"l":{"y":"-5vh"},"e":"Power4.easeInOut"}]},{"t":"#tacoShape","l":[{"t":"tween","p":1,"d":0.9,"l":{"y":"3vh"},"e":"Power4.easeInOut"}]},{"t":"#burritoShape","l":[{"t":"tween","p":1.12,"d":0.9,"l":{"y":"-3vh"},"e":"Power4.easeInOut"}]}]}}]}'>
+            <div class="shapeContainer" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":1.01,"d":0.4,"l":{"y":"6vh"},"e":"Quint.easeOut"}]},{"t":"#platoShape","l":[{"t":"tween","p":1.12,"d":0.4,"l":{"y":"-5vh"},"e":"Quint.easeOut"}]},{"t":"#tacoShape","l":[{"t":"tween","p":1.21,"d":0.4,"l":{"y":"3vh"},"e":"Quint.easeOut"}]},{"t":"#burritoShape","l":[{"t":"tween","p":1.31,"d":0.4,"l":{"y":"-3vh"},"e":"Quint.easeOut"}]},{"t":"$.favoritesButton","l":[{"t":"tween","p":1.4009098101265822,"d":0.5,"l":{"y":"0vh"},"e":"Quint.easeOut"}]}]}}]}' data-pg-ia-scene='{"s":"custom","s_t":"start","s_s":"center","l":[{"a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"20vh"}}]},{"t":"#platoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"-40vh"}}]},{"t":"#tacoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"15vh"}}]},{"t":"#burritoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"-10vh"}}]}]}}],"s_o":"100px"}'>
                 <img src="assets/img/nachoShape.svg" id="nachoShape"/>
                 <img src="assets/img/platoShape.svg" id="platoShape"/>
                 <img src="assets/img/tacoShape.svg" id="tacoShape"/>
@@ -94,7 +94,35 @@
             </div>
         </section>
         <section class="fullHeight horizontalGallery light-bg" id="faveSection">
-            <h3 class="favesTitle red-text">Favorites</h3>
+            <div class="faveSecTitle">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 14.76" height="20" style="transform: rotate(180deg);">
+                    <defs>
+                        <style>.cls-1{fill:#d94435;}</style>
+                    </defs>
+                    <g id="Layer_2" data-name="Layer 2">
+                        <g id="text">
+                            <circle class="cls-1" cx="1.97" cy="7.19" r="1.97"/>
+                            <path class="cls-1" d="M4.94,7.14s9.29-4.63,12.45-1.47h0a2.08,2.08,0,0,1,0,2.94h0C13.9,12.1,4.94,7.14,4.94,7.14Z"/>
+                            <path class="cls-1" d="M4.28,9.85s4.91,1.65,4.91,3.88h0a1,1,0,0,1-1,1h0C5.69,14.76,4.28,9.85,4.28,9.85Z"/>
+                            <path class="cls-1" d="M4.28,4.91S9.19,3.27,9.19,1h0a1,1,0,0,0-1-1h0C5.69,0,4.28,4.91,4.28,4.91Z"/>
+                        </g>
+                    </g>
+                </svg>
+                <h3 class="favesTitle red-text">Favorites</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 14.76" height="20">
+                    <defs>
+                        <style>.cls-1{fill:#d94435;}</style>
+                    </defs>
+                    <g id="Layer_2" data-name="Layer 2">
+                        <g id="text">
+                            <circle class="cls-1" cx="1.97" cy="7.19" r="1.97"/>
+                            <path class="cls-1" d="M4.94,7.14s9.29-4.63,12.45-1.47h0a2.08,2.08,0,0,1,0,2.94h0C13.9,12.1,4.94,7.14,4.94,7.14Z"/>
+                            <path class="cls-1" d="M4.28,9.85s4.91,1.65,4.91,3.88h0a1,1,0,0,1-1,1h0C5.69,14.76,4.28,9.85,4.28,9.85Z"/>
+                            <path class="cls-1" d="M4.28,4.91S9.19,3.27,9.19,1h0a1,1,0,0,0-1-1h0C5.69,0,4.28,4.91,4.28,4.91Z"/>
+                        </g>
+                    </g>
+                </svg>
+            </div>
             <div class="horizontalGallery">
                 <div class="horizontalStrip slider">
                     <div class="card yellow-bg">
@@ -118,21 +146,42 @@
                         <h4>Heading 6</h4>
                         <p>This is a paragraph, one or more lines of text. Each paragraph is displayed in a new line.</p>
                     </div>
+                    <div class="card yellow-bg">
+                        <div class="ellipseContainer">
+                            <img src="assets/img/burrito-01.jpg" class="foodPic"/>
+                        </div>
+                        <h4>Heading 6</h4>
+                        <p>This is a paragraph, one or more lines of text. Each paragraph is displayed in a new line.</p>
+                    </div>
+                    <div class="card yellow-bg">
+                        <div class="ellipseContainer">
+                            <img src="assets/img/burrito-01.jpg" class="foodPic"/>
+                        </div>
+                        <h4>Heading 6</h4>
+                        <p>This is a paragraph, one or more lines of text. Each paragraph is displayed in a new line.</p>
+                    </div>
                 </div>
             </div>
+            <div class="wordArt">
+                <img src="assets/img/wordArt.svg"/> 
+            </div>
         </section>         
-        <section class="eachSection green-bg"> 
+        <section class="eachSection green-bg" id="locationSec"> 
             <h3 class="location-title">Location</h3> 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d901.8103165755932!2d-157.9207426500619!3d21.63839082185303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c00451360f80cf1%3A0x930291a38bab3132!2sGuadalajara%20Grill%20Hawaii!5e0!3m2!1sen!2sus!4v1627371047882!5m2!1sen!2sus" width="600" height="450" style="border: 0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>             
-            <p>Inside Hukilau Marketplace<br>55-370 Kamehameha Hwy<br>Laie, HI 96762<br>USA</p> 
-            <button>Get Directions</button>             
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d901.8103165755932!2d-157.9207426500619!3d21.63839082185303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c00451360f80cf1%3A0x930291a38bab3132!2sGuadalajara%20Grill%20Hawaii!5e0!3m2!1sen!2sus!4v1627371047882!5m2!1sen!2sus" width="600" height="360" style="border: 0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>             
+            <div class="locationDesc">
+                <p class="locationAddress">Inside Hukilau Marketplace<br>55-370 Kamehameha Hwy<br>Laie, HI 96762<br>USA</p>
+                <button id="directionButton">Get Directions</button>
+            </div>                          
         </section>         
-        <section style="background-color: #2b988a;" class="eachSection"> 
-            <h3>OUR STORY</h3> 
+        <section style="background-color: #2b988a;" class="eachSection" id="storySec"> 
+            <h3>OUR STORY</h3>
+            <img src="assets/img/benderitas.svg" alt="banderitas" id="banderitas"/> 
             <p>Two brothers and a lifelong dream to open their own food business in Hawaii. This dream started to become a reality when Gio and Javi the owners of Guadalajara Grill moved to Hawaii. They started working at the same restaurant where Javi, worked as a Chef. Gio was the Manager and with both of their experience they used it to start their very own business.</p> 
+            <img src="assets/img/crown.svg" id="crownQuote"/>
             <q>FAMILY OWNED AND OPERATED SINCE 2016</q> 
             <p>Since 2016 Javi and Gio have been great companions. Influencing each other to make the right choices in order to achieve their dream.</p> 
-            <img src="assets/img/padilla-family.png" style="width: 100%;"/> 
+            <img src="assets/img/padilla-family.png" style="width: 100%;" alt="Picture of two sons and their mom with the shaka"/> 
         </section>         
         <footer class="pg-empty-placeholder"></footer>         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.12/lottie.min.js" integrity="sha512-Dr2QERtNqLw0I06FR7G73CjiWvR4roRMDNTbOGp+qeGhVjEl0xs4AKZzqVFREqdOL3t8ei7H9y9XUcpYVkwEIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>         
