--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </ul>             
         </nav>         
         <section class="eachSection fullHeight"> 
-            <h1 class="title-intro"><span id="aloha" class="blue-text">Aloha!</span> <span id="welcome" class="green-text">Welcome to </span></h1> 
-            <div id="lottie-one" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"","l":[{"t":"tween","p":0,"d":2,"l":{"pgLottie":{"seek":1}},"e":"Linear.easeInOut"}]}]}}]}'></div>             
+            <h1 class="title-intro"><span id="aloha" class="blue-text" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"$#aloha, #welcome","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0}},{"t":"tween","p":0,"d":0.5,"s":0.25,"l":{"y":"0vh"},"e":"Power0.easeOut"},{"t":"tween","p":0.28,"d":0.5,"l":{"autoAlpha":1}}]}]}}]}'>Aloha!</span> <span id="welcome" class="green-text" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"","l":[]}]}}]}'>Welcome to </span></h1> 
+            <div id="lottie-one" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"","l":[{"t":"tween","p":1,"d":2,"l":{"pgLottie":{"seek":1}},"e":"Linear.easeInOut"}]}]}}]}'></div>             
             <h2 style="font-family: museo-slab; font-weight: 400; font-size: 3.1vw; text-align: center; margin-top: 5%; margin-bottom: 10%; color: #2d2525;">Family-owned Authentic Mexican Cuisine</h2> 
             <div class="button red-bg">
                 <a href="" style="position: absolute; z-index: 1; top: 0; bottom: 0; right: 0; left: 0;"></a> 
@@ -86,7 +86,7 @@
                 </svg>
                 <img src="assets/img/arrow-down.svg" style="position: absolute; top: 35%; left: 35%;"/>
             </div>
-            <div class="shapeContainer" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":1.01,"d":0.4,"l":{"y":"6vh"},"e":"Quint.easeOut"}]},{"t":"#platoShape","l":[{"t":"tween","p":1.12,"d":0.4,"l":{"y":"-5vh"},"e":"Quint.easeOut"}]},{"t":"#tacoShape","l":[{"t":"tween","p":1.21,"d":0.4,"l":{"y":"3vh"},"e":"Quint.easeOut"}]},{"t":"#burritoShape","l":[{"t":"tween","p":1.31,"d":0.4,"l":{"y":"-3vh"},"e":"Quint.easeOut"}]},{"t":"$.favoritesButton","l":[{"t":"tween","p":1.4009098101265822,"d":0.5,"l":{"y":"0vh"},"e":"Quint.easeOut"}]}]}}]}' data-pg-ia-scene='{"s":"custom","s_t":"start","s_s":"center","l":[{"a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"20vh"}}]},{"t":"#platoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"-40vh"}}]},{"t":"#tacoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"15vh"}}]},{"t":"#burritoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"-10vh"}}]}]}}],"s_o":"100px"}'>
+            <div class="shapeContainer" data-pg-ia='{"l":[{"trg":"load","a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":1.8,"d":0.4,"l":{"y":"6vh"},"e":"Quint.easeOut"}]},{"t":"#platoShape","l":[{"t":"tween","p":1.9,"d":0.4,"l":{"y":"-5vh"},"e":"Quint.easeOut"}]},{"t":"#tacoShape","l":[{"t":"tween","p":2,"d":0.4,"l":{"y":"3vh"},"e":"Quint.easeOut"}]},{"t":"#burritoShape","l":[{"t":"tween","p":2.1,"d":0.4,"l":{"y":"-3vh"},"e":"Quint.easeOut"}]},{"t":"$.favoritesButton","l":[{"t":"tween","p":2.2,"d":0.5,"l":{"y":"0vh"},"e":"Quint.easeOut"}]}]}}]}' data-pg-ia-scene='{"s":"custom","s_t":"start","s_s":"center","l":[{"a":{"l":[{"t":"#nachoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"20vh"}}]},{"t":"#platoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"-40vh"}}]},{"t":"#tacoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"15vh"}}]},{"t":"#burritoShape","l":[{"t":"tween","p":0,"d":1,"l":{"y":"-10vh"}}]}]}}],"s_o":"100px"}'>
                 <img src="assets/img/nachoShape.svg" id="nachoShape"/>
                 <img src="assets/img/platoShape.svg" id="platoShape"/>
                 <img src="assets/img/tacoShape.svg" id="tacoShape"/>
@@ -97,7 +97,7 @@
             <div class="faveSecTitle">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 14.76" height="20" style="transform: rotate(180deg);">
                     <defs>
-                        <style>.cls-1{fill:#d94435;}</style>
+                        <style>.cls-1 { fill: #d94435; }</style>
                     </defs>
                     <g id="Layer_2" data-name="Layer 2">
                         <g id="text">
@@ -111,7 +111,7 @@
                 <h3 class="favesTitle red-text">Favorites</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 14.76" height="20">
                     <defs>
-                        <style>.cls-1{fill:#d94435;}</style>
+                        <style>.cls-1 { fill: #d94435; }</style>
                     </defs>
                     <g id="Layer_2" data-name="Layer 2">
                         <g id="text">
@@ -172,7 +172,7 @@
             <div class="locationDesc">
                 <p class="locationAddress">Inside Hukilau Marketplace<br>55-370 Kamehameha Hwy<br>Laie, HI 96762<br>USA</p>
                 <button id="directionButton">Get Directions</button>
-            </div>                          
+            </div>             
         </section>         
         <section style="background-color: #2b988a;" class="eachSection" id="storySec"> 
             <h3>OUR STORY</h3>
