Add DirectionButton Click Listener for google directions

--- a/index.html
+++ b/index.html
@@ -195,5 +195,6 @@
 		});
 		</script>         
         <script src="pgia/lib/pgia.js"></script>         
+        <script src="./scripts/main.js"></script>         
     </body>     
 </html>
